--- a/less/homePage.less
+++ b/less/homePage.less
@@ -6,17 +6,26 @@
     font-size: 3rem; 
 }
 
-.btmLftP{
+.callH1{
     position: absolute;
     bottom: 700px; 
     left: 40px; 
     line-height: 5rem;
 }
 
+.callP{
+    position:absolute;
+    bottom: 650px; 
+    left: 40px; 
+    font-size: 24pt;
+    color: @satin; 
+    font-weight: 250;
+}
+
 .btn{
     position: absolute;
     bottom: 300px; //move button up and right.  line it up 
-    left: 100px; 
+    left: 40px; 
     background-color: @satin;
     border:  solid @satin;
     border-radius: 5px;
