--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,30 +1,29 @@
 header {
-    .flexCenter(); 
+    // .flexCenter();
+    display: block;  
     justify-content: space-between;
-    align-content: flex-end;
+    // align-content: flex-end;
     background-color: @satin; 
-    //padding: 2rem; 
-
+   
 }
 
 #headerLogo {
-    margin: 0 0 0 40px;  
+    margin: 0 0 0 40px; 
+    display: inline-block;  
 }
 
 nav a {
-    font-size: 2rem;
-    padding: 3rem;
+    font-size: 2.5rem;
     background-color: @satin;
     border:  solid @satin;
     border-radius: 5px;
-    color: @midnight;
+    color: #59667a;
     padding: 15px 32px;
     text-align: end;
     display: inline-block;
-    font-size: 16px;
     font-family: barlow, sans-serif;
     font-weight: bold;
-    margin: 4px 2px;
+    margin: 60px 20px 0 0;
     text-decoration: none;
 }
 
