--- a/less/variables.less
+++ b/less/variables.less
@@ -3,7 +3,7 @@
 @sirocco: #818F91; 
 @shuttle: #59667A; 
 @mirage: #796ebc; 
-@midnight: #191A2A; 
+@midnight: #292a30; 
 
 
 //media breaks
